changes to the id's

--- a/src/main/angular/src/peoplesearch/person-details-dialog.component.html
+++ b/src/main/angular/src/peoplesearch/person-details-dialog.component.html
@@ -7,7 +7,7 @@
                          show-image="$ctrl.photosEnabled"
                          show-direct-report-count="false"></person-card>
             <mf-button type="button" ng-click="$ctrl.gotoOrgChart()" ng-if="$ctrl.orgChartEnabled">
-                <mf-icon icon="orgchart"></mf-icon>
+                <mf-icon icon="orgchart" id="orgchart-button"></mf-icon>
                 <span translate="Title_OrgChart">Organizational Chart</span>
             </mf-button>
         </div>
