--- a/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
@@ -9,17 +9,20 @@
     <mf-icon-button
             icon="view-tile"
             disabled="true"
-            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"></mf-icon-button>
+            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"
+            id="view-tile-icon"></mf-icon-button>
     <mf-icon-button
             icon="view-list"
             ng-click="$ctrl.gotoTableView()"
-            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"></mf-icon-button>
+            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"
+            id="view-list-icon"></mf-icon-button>
     <div class="mf-divider vertical" ng-if="$ctrl.orgChartEnabled"></div>
     <mf-icon-button
             icon="orgchart"
             ng-click="$ctrl.gotoOrgchart()"
             ng-if="$ctrl.orgChartEnabled"
-            ng-attr-title="{{ 'Title_OrgChart' | translate }}"></mf-icon-button>
+            ng-attr-title="{{ 'Title_OrgChart' | translate }}"
+            id="orgchart-icon"></mf-icon-button>
 </mf-app-bar>
 
 <div class="people-search-component-content">
