--- a/src/main/angular/src/peoplesearch/person-details-dialog.component.html
+++ b/src/main/angular/src/peoplesearch/person-details-dialog.component.html
@@ -25,8 +25,7 @@
                             </ul>
                         </td>
                     </tr>
-                    <tr ng-repeat="(key, detail) in $ctrl.person.detail"
-                        ng-attr-id="{{' detail-' + detail.index }}">
+                    <tr ng-repeat="(key, detail) in $ctrl.person.detail">
                         <td ng-bind="detail.label"></td>
                         <td ng-switch="detail.type">
                             <div class="detail-container" ng-switch-when="userDN">
