--- a/src/main/angular/src/ux/button.component.scss
+++ b/src/main/angular/src/ux/button.component.scss
@@ -39,12 +39,12 @@ mf-button {
 
     &:focus,
     &:hover {
-      color: #0088ce;
+      color: #007cd0;
       outline: none;
     }
 
     &:focus {
-      border-color: #28a9e1;
+      border-color: #01a9e7;
     }
 
     &:hover {
