--- a/src/main/angular/src/ux/search-bar.component.scss
+++ b/src/main/angular/src/ux/search-bar.component.scss
@@ -66,7 +66,7 @@ mf-search-bar {
         border-color: transparent;
 
         > mf-icon {
-          color: #0088ce;
+          color: #007cd0;
         }
       }
     }
