--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -1043,7 +1043,7 @@ dialog .closeIcon { float: right; cursor: pointer; margin-right: 3px; }
 }
 
 .licenseBlock a {
-    color: #0088ce;
+    color: #007cd0;
     font-weight: normal;
     text-decoration: none;
 }
