--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -29,18 +29,19 @@
                    auto-focus></mf-search-bar>
     <span flex></span>
     <mf-icon-button
-            icon="view-tile"
+            icon="view-tile_thin"
             id="view-title-button"
             ng-click="$ctrl.gotoCardsView()"
             ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"></mf-icon-button>
     <mf-icon-button
-            icon="view-list"
+            icon="view-list_thin"
             id="view-list-button"
+            class="selected"
             disabled="true"
             ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"></mf-icon-button>
     <div class="mf-divider vertical" ng-if="$ctrl.orgChartEnabled"></div>
     <mf-icon-button
-            icon="orgchart"
+            icon="orgchart_thin"
             id="view-orgchart-button"
             ng-click="$ctrl.gotoOrgchart()"
             ng-if="$ctrl.orgChartEnabled"
@@ -49,7 +50,7 @@
 
 <div class="people-search-component-content">
     <div class="search-info-container">
-        <div class="search-info"
+        <div class="search-info" ng-class="{'loading': !$ctrl.getMessage()}"
              ng-if="$ctrl.loading || $ctrl.searchMessage || $ctrl.errorMessage"
              ng-bind="$ctrl.getMessage() || ('Display_PleaseWait' | translate)">
         </div>
