--- a/src/main/angular/src/peoplesearch/peoplesearch.scss
+++ b/src/main/angular/src/peoplesearch/peoplesearch.scss
@@ -64,9 +64,10 @@ a {
   }
 
   .search-info-container {
-    min-height: 38px;
+    text-align: left;
 
     .search-info {
+      background-color: #fff6ce;
       border: 1px solid #dae1e1;
       border-radius: 3px;
       color: #808080;
@@ -74,11 +75,22 @@ a {
       font-size: 14px;
       margin: 0 auto 10px;
       padding: 5px;
-      text-align: center;
+
+      &.loading {
+        background-color: white;
+      }
     }
   }
 }
 
 .highlight {
   color: #01a9e7;
+}
+
+[dir="rtl"] {
+  .people-search-component {
+    .search-info-container {
+      text-align: right;
+    }
+  }
 }
