Show direct report count for children in OrgChart view

--- a/src/main/angular/src/peoplesearch/orgchart.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart.component.html
@@ -53,7 +53,7 @@
 
     <div class="person-card-list">
         <person-card person="directReport"
-                     show-direct-report-count="false"
+                     show-direct-report-count="true"
                      show-image="$ctrl.showImages"
                      ng-repeat="directReport in $ctrl.directReports"
                      ng-click="$ctrl.selectPerson(directReport.userKey)">
