--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -22,6 +22,7 @@
 
 <mf-app-bar>
     <div id="page-content-title" translate="Title_PeopleSearch">People Search</div>
+    <span flex class="search-bar-spacing"></span>
     <mf-search-bar input-debounce="$ctrl.inputDebounce"
                    search-text="$ctrl.query"
                    on-search-text-change="$ctrl.onSearchTextChange(value)"
