Cards sorted by first displayName in PeopleSearchCards component and in OrgChart direct reports

--- a/src/main/angular/src/peoplesearch/orgchart.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart.component.html
@@ -55,7 +55,7 @@
         <person-card person="directReport"
                      show-direct-report-count="true"
                      show-image="$ctrl.showImages"
-                     ng-repeat="directReport in $ctrl.directReports"
+                     ng-repeat="directReport in $ctrl.directReports | orderBy:'displayNames[0]'"
                      ng-click="$ctrl.selectPerson(directReport.userKey)">
         </person-card>
     </div>
