--- a/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
@@ -59,7 +59,7 @@
     <div class="person-card-list">
         <person-card person="person"
                      show-image="$ctrl.photosEnabled"
-                     ng-repeat="person in $ctrl.searchResult.people"
+                     ng-repeat="person in $ctrl.searchResult.people | orderBy:'displayNames[0]'"
                      ng-click="$ctrl.selectPerson(person)">
         </person-card>
     </div>
