Assistant displayed in OrgChart

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -55,6 +55,7 @@
 <org-chart person="$ctrl.person"
            direct-reports="$ctrl.directReports"
            show-images="$ctrl.photosEnabled"
+           assistant="$ctrl.assistant"
            management-chain="$ctrl.managementChain">
 </org-chart>
 
