[bug 1048116] Changed the popup read People search cards and People search table.

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -36,12 +36,12 @@
     <mf-icon-button
             icon="view-tile_thin"
             ng-click="$ctrl.gotoSearchState('search.cards')"
-            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"
+            ng-attr-title="{{ 'Title_PeopleSearchCard' | translate }}"
             id="view-tile-icon"></mf-icon-button>
     <mf-icon-button
             icon="view-list_thin"
             ng-click="$ctrl.gotoSearchState('search.table')"
-            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"
+            ng-attr-title="{{ 'Title_PeopleSearchTable' | translate }}"
             id="view-list-icon"></mf-icon-button>
     <div class="mf-divider vertical"></div>
     <mf-icon-button
