--- a/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
@@ -32,12 +32,12 @@
             icon="view-tile_thin"
             class="selected"
             disabled="true"
-            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"
+            ng-attr-title="{{ 'Title_PeopleSearchCard' | translate }}"
             id="view-tile-icon"></mf-icon-button>
     <mf-icon-button
             icon="view-list_thin"
             ng-click="$ctrl.gotoTableView()"
-            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"
+            ng-attr-title="{{ 'Title_PeopleSearchTable' | translate }}"
             id="view-list-icon"></mf-icon-button>
     <div class="mf-divider vertical" ng-if="$ctrl.orgChartEnabled"></div>
     <mf-icon-button
