Fixed a problem where the tabs were missing when the locale was set to Hebrew (locale=he).
In this case, the tabs were left-aligned, and rendered off of the page.  The fix was to change the alignment to be on the right.

--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -1160,3 +1160,11 @@ dialog .closeIcon { float: right; cursor: pointer; margin-right: 3px; }
     border-radius: 3px;
     z-index:1002;
 }
+
+html[dir="rtl"] .nihilo .dijitTabContainerTop-tabs {
+    text-align: right;
+}
+
+html[dir="rtl"] .nihilo .dijitTabContainerTop-tabs > .dijitTabContent:first-child {
+    margin-right: 10px;
+}
