Added field labels so themes could make use of them, if needed.
These were removed during a refactor a while ago, but they should have just been marked as hidden by default instead.

--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -880,9 +880,13 @@ select {
 	border: 1px solid transparent;
 }
 
-	#login .buttonbar #submitBtn span {
-		display: none;
-	}
+#login .buttonbar #submitBtn span {
+    display: none;
+}
+
+#login .loginFieldLabel {
+    display: none;
+}
 
 input[type=search] {
 }
