Updated the code to make sure the raw error message is shown properly when the language is set to Hebrew.
Just a note for testing, you must first enable "Show Detailed Error Messages" before you will be able to see the extended error messages, with the low-level error numbers.

To do this:
• Login to SSPR, and launch the Configuration Editor.
• Type the password, and click the "Sign In" button.
• Navigate to: Settings > Security > Application Security, and make sure "Show Detailed Error Messages" is enabled.

Here are the scenarios I have fixed and verified in Hebrew:

Login page:
• Use an invalid username
• Use a valid username and an invalid password

Forgotten Password page:
• Use an invalid username
• Use a valid username, but use invalid answers on the next page

--- a/server/src/main/webapp/public/resources/style.css
+++ b/server/src/main/webapp/public/resources/style.css
@@ -1254,3 +1254,13 @@ html[dir="rtl"] .nihilo .dijitTabContainerTop-tabs > .dijitTabContent:first-chil
     position: relative;
     z-index:1003;
 }
+
+html[dir="rtl"] .errorDetail {
+    direction: ltr;
+    text-align: right;
+    unicode-bidi: bidi-override;
+}
+
+html[dir="rtl"] .message.message-error .errorDetail {
+    display: inline-block;
+}
