Added the option to use zxcvbn for password meter strength estimation.
This feature can be enabled under Settings > Modules > Authenticated > Change Password > Use zxcvbn for Strength Meter Algorithm.

See:
https://github.com/dropbox/zxcvbn
https://www.usenix.org/system/files/conference/usenixsecurity16/sec16_paper_wheeler.pdf

--- a/server/src/main/webapp/public/resources/style.css
+++ b/server/src/main/webapp/public/resources/style.css
@@ -1264,3 +1264,7 @@ html[dir="rtl"] .errorDetail {
 html[dir="rtl"] .message.message-error .errorDetail {
     display: inline-block;
 }
+
+#strengthLabel {
+    white-space: nowrap;
+}
